--- a/dev/config-server.yml
+++ b/dev/config-server.yml
@@ -1,7 +1,7 @@
-eureka:
-  instance:
-    hostname: config-server
-    preferIpAddress: true
-  client:
-    serviceUrl:
-      defaultZone: ${REGISTER_SERVER_URL:http://localhost:8761/eureka/}
+#eureka:
+#  instance:
+#    hostname: config-server
+#    preferIpAddress: true
+#  client:
+#    serviceUrl:
+#      defaultZone: ${REGISTER_SERVER_URL:http://localhost:8761/eureka/}
