--- a/dev/config-server.yml
+++ b/dev/config-server.yml
@@ -4,4 +4,4 @@ eureka:
     preferIpAddress: true
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: ${REGISTER_SERVER_URL:http://localhost:8761/eureka/}
