--- a/dev/application.yml
+++ b/dev/application.yml
@@ -22,5 +22,5 @@ management:
 logging:
   level:
     java.sql: debug
-    com.hand.zhishinet: debug
+    com.cloud: debug
     org.springframework.data.redis: debug
