--- a/dev/application.yml
+++ b/dev/application.yml
@@ -21,6 +21,6 @@ management:
 
 logging:
   level:
-    java.sql: debug
-    com.cloud: debug
-    org.springframework.data.redis: debug
+    java.sql: DEBUG
+    com.cloud: DEBUG
+    org.springframework.data.redis: DEBUG
